src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Journal_Articles_MERC__c</fullName>
        <description>Range of peer-reviewed journal articles have you authored/co-authored (past 10 years)
Created by John A Adams 10/16/2013</description>
        <inlineHelpText>How many peer-reviewed journal articles or textbooks have you authored/co-authored  in the past 10 years?</inlineHelpText>
        <label>Journal Articles or Textbooks</label>
        <picklist>
            <picklistValues>
                <fullName>0-2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3-4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Justification_for_Preferred_Venue_MERC__c</fullName>
        <description>To enter justification for Venue being a Preferred Venue. Created 10/24/2013 by KLorenti, Mavens Consulting</description>
        <label>Justification for Preferred Venue</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Key_Opinion_Leader_GLBL__c</fullName>
        <description>Is this HCP a Key Opinion Leader (KLP)?  Added for future initiatives.
Created by John A Adams 10/28/2013</description>
        <label>Key Opinion Leader</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Language_Preference_MERC__c</fullName>
        <description>Used for Mercury specific language preference capture.  The mastered preferred language field is not reliable from a data perspective.  This will be captured and stored/maintained within Mercury until a time whereby the master data can be tidied if possible.  Oliver Dunford 7th Jan.</description>
        <label>Language Preference</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Review_Date_MERC__c</fullName>
        <description>Track date the Venue was last reviewed.  Used to delete venue if property is not validated in the quarterly review. Created 10/4/2013 by KLorenti.</description>
        <label>Last Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lilly_Company_Code_GLBL__c</fullName>
        <description>The Lilly Affiliate Company code. Created by John Adams 12/11/2013</description>
        <label>Lilly Company Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lilly_Company_VAT_ID_GLBL__c</fullName>
        <description>Lilly affiliates VAT ID number
Created by John A Adams 12/11/2013</description>
        <label>Lilly Company VAT ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MSA_Contract_Expiration_MERC__c</fullName>
        <description>Displays Maximum Expiration Date of MSA&apos;s if there is one</description>
        <label>MSA Expiration Date</label>
        <summarizedField>HCP_Contract_MERC__c.MSA_End_Date_MERC__c</summarizedField>
        <summaryFilterItems>
            <field>HCP_Contract_MERC__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Master Service Agreement</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>HCP_Contract_MERC__c.Contract_Request_Status_MERC__c</field>
            <operation>equals</operation>
            <value>Contract signed</value>
        </summaryFilterItems>
        <summaryForeignKey>HCP_Contract_MERC__c.Account_MERC__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Mdl_Nm_GLBL__c</fullName>
        <description>Workforce ODS data. Created 10/18/2013 by KLorenti, Mavens Consulting</description>
        <label>Middle Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mercury_External_Id_MERC__c</fullName>
        <description>Generated by Workflow used for Integration with External Systems.
Created by J Adams 12/10/2013</description>
        <externalId>true</externalId>
        <label>Mercury External Id</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merge_DT_GLBL__c</fullName>
        <description>Merge DT
Customer ODS to Mercury Mapping
Created by John Adams 11/10/2013</description>
        <label>Merge DT</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mltry_Flg_GLBL__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Military Flag
Customer ODS to Mercury Mapping
Created by John A Adams 11/4/2013</description>
        <label>Military Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Multiple_Specialties_MERC__c</fullName>
        <description>Stores HCP response about having multiple specialties
Created by John A Adams 10/16/2013</description>
        <inlineHelpText>Do you have multiple specialties?</inlineHelpText>
        <label>Multiple Specialties</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Name_of_Institution_GLBL__c</fullName>
        <description>Name of Government Institution
Created by John A Adams 10/22/2013</description>
        <label>Name of Institution</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>National_Inter_Leadership_Role_MERC__c</fullName>
        <description>Stores experience as a national or international leader.
Created by John A Adams 10/16/2013</description>
        <inlineHelpText>Do you have experience in any national or international medical associations/committees/scientific groups/clinical research position (e.g., National Diabetes Association)</inlineHelpText>
        <label>National / International Leadership Role</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ODS_Ld_Tmstmp_GLBL__c</fullName>
        <description>Source Load Timestamp
Customer ODS to Mercury Mapping
Created by John A Adams 11/4/2013</description>
        <label>Source Load Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ODS_Ld_Usr_GLBL__c</fullName>
        <description>ODS Load User
Customer ODS to Mercury Mapping
Created by John A Adams 11/4/2013</description>
        <label>ODS Load User</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ODS_Lst_Updt_Tmstmp_GLBL__c</fullName>
        <description>Source Update Timestamp
Customer ODS to Mercury Mapping
Created by John A Adams 11/4/2013</description>
        <label>Source Update Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ODS_Lst_Updt_Usr_GLBL__c</fullName>
        <description>ODS Last Update User
Customer ODS to Mercury Mapping
Created by John A Adams 11/4/2013</description>
        <label>ODS Last Update User</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org_Unit_Cd_GLBL__c</fullName>
        <description>Workforce ODS data. Created 10/18/2013 by KLorenti, Mavens Consulting</description>
        <label>Organization Unit Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org_Unit_Desc_GLBL__c</fullName>
        <description>Workforce ODS data. Created 10/18/2013 by KLorenti, Mavens Consulting</description>
        <label>Organization Unit Description</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orig_Party_Rec_Type_CD_GLBL__c</fullName>
        <description>Original Party Record Type Code
Customer ODS to Mercury Mapping
Created by John Adams 11/10/2013</description>
        <label>Original Party Record Type Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Party_ID_GLBL__c</fullName>
        <description>Original Party ID
Customer ODS to Mercury Mapping
Created by John Adams 11/10/2013</description>
        <label>Original Party ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Specialities_GLBL__c</fullName>
        <description>Other Specialities 
Created by John A Adams 12/15/2013</description>
        <label>Other Specialities</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Specialty_Codes_GLBL__c</fullName>
        <description>Master data speciality code. Oliver Dunford 14th Jan 2014.</description>
        <label>Other Specialty Codes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Othr_Ttl_Txt_GLBL__c</fullName>
        <description>Workforce ODS data. Created 10/18/2013 by KLorenti, Mavens Consulting</description>
        <label>Other Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Paid_CAP_MERC__c</fullName>
        <description>Consolidates Paid CAP from Invoices for Consulting Projects or Speaker Engagements. Oliver Dunford 20th Jan 2014.</description>
        <formula>Consulting_Project_Paid_CAP_MERC__c +  Speaking_Paid_CAP_MERC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Paid CAP for all Services Provided for the current year.</inlineHelpText>
        <label>Paid CAP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Participated_in_Clinical_Trials_MERC__c</fullName>
        <description>Records speakers participation in clinical trials
Created by John A Adams 10/3/2013</description>
        <inlineHelpText>Have you participated in clinical trials?</inlineHelpText>
        <label>Participated in Clinical Trials</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Party_Rcrd_Typ_Cd_GLBL__c</fullName>
        <description>Party Record Type Code
Customer ODS to Mercury Mapping
Created by John A Adams 11/4/2013</description>
        <label>Party Record Type Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Party_Sts_Cd_GLBL__c</fullName>
        <description>Party Status Code 
Customer ODS to Mercury Mapping
Created by John A Adams 11/4/2013</description>
        <label>Party Status Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Party_Sts_Desc_GLBL__c</fullName>
        <description>Party Status Description
Customer ODS to Mercury Mapping
Created by John A Adams 12/10/2013</description>
        <label>Party Status Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Required_MERC__c</fullName>
        <description>Indicates whether the HCP&apos;s current preference is to have payment for Contracts or not.  Oliver Dunford 7th Nov 2013.</description>
        <label>Payment Required</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Personal_Address_City_MERC__c</fullName>
        <description>Stamped with the Primary Personal Address of the HCP from the Address object. This is if the HCP supplies such details via the Portal or another medium. Oliver Dunford. 13th Feb 2014.</description>
        <label>Personal Address City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_Address_Country_MERC__c</fullName>
        <description>Stamped with the Primary Personal Address of the HCP from the Address object. This is if the HCP supplies such details via the Portal or another medium. Oliver Dunford. 13th Feb 2014.</description>
        <label>Personal Address Country</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_Address_Line_1_MERC__c</fullName>
        <description>Stamped with the Primary Personal Address of the HCP from the Address object.  This is if the HCP supplies such details via the Portal or another medium.  Oliver Dunford. 13th Feb 2014.</description>
        <label>Personal Address Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_Address_Line_2_MERC__c</fullName>
        <description>Stamped with the Primary Personal Address of the HCP from the Address object. This is if the HCP supplies such details via the Portal or another medium. Oliver Dunford. 13th Feb 2014.</description>
        <label>Personal Address Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_Postal_Code_Extension_MERC__c</fullName>
        <description>Stamped with the Primary Personal Address of the HCP from the Address object. This is if the HCP supplies such details via the Portal or another medium. Oliver Dunford. 13th Feb 2014.</description>
        <label>Personal Postal Code Extension</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Typ_Cd_GLBL__c</fullName>
        <description>Plan Type Code 
Customer ODS to Mercury Mapping
Created by John A Adams 11/4/2013</description>
        <label>Plan Type Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pmt_Nm_GLBL__c</fullName>
        <description>Payment Name
Customer ODS to Mercury Mapping
Created by John A Adams 11/4/2013</description>
        <label>Payment Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position_Cd_GLBL__c</fullName>
        <description>Workforce ODS data. Created 10/18/2013 by KLorenti, Mavens Consulting</description>
        <label>Position Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position_Desc_GLBL__c</fullName>
        <description>Workforce ODS data. Created 10/18/2013 by KLorenti, Mavens Consulting</description>
        <label>Position Description</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Practicing_for_MERC__c</fullName>
        <description>To record the Speakers number of years of practice
Created by John A Adams 10/3/2013</description>
        <inlineHelpText>How long have you been practicing?</inlineHelpText>
        <label>Practicing for</label>
        <picklist>
            <picklistValues>
                <fullName>&lt;5 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5-10 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10-20 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20+ Years</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Preferred_Venue_MERC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicate if Venue is a Preferred Venue. Created 10/24/2013 by KLorenti, Mavens Consulting</description>
        <label>Preferred Venue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prfrd_Lang_Cd_GLBL__c</fullName>
        <description>Preferred Language
Customer ODS to Mercury Mapping
Created by John A Adams 11/4/2013</description>
        <label>Preferred Language</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prfrd_Nm_GLBL__c</fullName>
        <description>Populated by ODS, for HCO Names. Oliver Dunford 18th Nov 2013.</description>
        <label>Preferred Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Prfsnl_Start_Dt_GLBL__c</fullName>
        <description>Party Start Date
Customer ODS to Mercury Mapping
Created by John A Adams 11/4/2013</description>
        <label>Party Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Prim_Affil_Addr_City_GLBL__c</fullName>
        <description>Primary Affiliation Address City.  Created by John Adams on 12/9/2013</description>
        <label>Primary Affiliation Address City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prim_Affil_Addr_Country_GLBL__c</fullName>
        <description>Primary Affiliation Address Country</description>
        <label>Primary Affiliation Address Country</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prim_Affil_Addr_Line1_GLBL__c</fullName>
        <description>Primary Affiliation Address Line 1
Created by John Adams on 12/9/2013</description>
        <label>Primary Affiliation Address Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prim_Affil_Addr_Line2_GLBL__c</fullName>
        <description>Primary Affiliation Address Line 2 
Created by John Adams on 12/9/2013</description>
        <label>Primary Affiliation Address Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prim_Affil_HCO_GLBL__c</fullName>
        <description>Primary Affiliation HCO Name. Created by John Adams on 12/9/2013</description>
        <label>Primary Affiliation HCO Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prim_Affil_Pstl_Cd_Extnsn_GLBL__c</fullName>
        <description>Primary Affiliate Postal Code Extension
Created by John A Adams 12/12/2013</description>
        <label>Primary Affiliate Postal Code Extension</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Addr_City_GLBL__c</fullName>
        <description>Primary Address City copied from primary address
Created by John Adams on 11/13/2013</description>
        <label>Primary Address City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Addr_Line1_GLBL__c</fullName>
        <description>To be copied form from Address_GLBL.Name of &quot;primary&quot; address
Created by John Adams on 11/13/2013</description>
        <label>Primary Address Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Addr_Line2_GLBL__c</fullName>
        <description>To be copied from Line_2_Adrs_Txt_GLBL__c of &quot;primary&quot; address
Created by John Adams on 11/13/2013</description>
        <label>Primary Address Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Address_Country_GLBL__c</fullName>
        <description>Primary Address  Country Code copied from primary address
Created by John Adams on 11/13/2013</description>
        <label>Primary Address Country</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_HCO_GLBL__c</fullName>
        <description>Primary HCO/Affiliation Name 
Created by John Adams on 11/13/2013</description>
        <label>Primary HCO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Pstl_Cd_Extnsn_GLBL__c</fullName>
        <description>Postal Code or Zip Extension
Created by John A Adams 12/11/2013</description>
        <label>Primary Postal Code Extension</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prof_Title_Txt_GLBL__c</fullName>
        <description>Professional Title
Customer ODS to Mercury Mapping
Created by John A Adams 11/4/2013</description>
        <label>Professional Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Remarks_MERC__c</fullName>
        <description>Field to enter comments about the Venue/Property</description>
        <label>Property Remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Prsnl_Nbr_GLBL__c</fullName>
        <description>Workforce ODS data. Created 10/17/2013 by KLorenti, Mavens Consulting</description>
        <label>Global ID</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quality_Level_GLBL__c</fullName>
        <description>Quality Level
Customer ODS to Mercury Mapping
Created by John A Adams 11/4/2013</description>
        <label>Quality Level</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RTI_Transaction_ID_MERC__c</fullName>
        <label>RTI Transaction ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regional_Leadership_Role_MERC__c</fullName>
        <description>Stores experience as a regional leader.
Created by John A Adams 10/16/2013</description>
        <inlineHelpText>Have experience in leadership role in any regional medical associations/committees/scientific groups/clinical research position (e.g., provincial/state med association) ?</inlineHelpText>
        <label>Regional Leadership Role</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Relationship_Owner_MERC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Enables relationship owner to be associated against the HCP&apos;s profile. 
Created by John A Adams 10/23/2013</description>
        <label>Relationship Owner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Remaining_CAP_MERC__c</fullName>
        <description>Calculates remaining CAP for the current calendar year.  Annual Country CAP stamped from custom settings and updated each year via Apex batch job. Oliver Dunford 7th Nov 2013.</description>
        <formula>Annual_CAP_Limit_MERC__c - ( Reserved_CAP_MERC__c +  Allocated_CAP_MERC__c +  Speaking_Paid_CAP_MERC__c +  Consulting_Project_Paid_CAP_MERC__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining CAP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reserved_CAP_MERC__c</fullName>
        <description>Shows the CAP currently reserved for a Services Provider for current calendar year.  Created by Oliver Dunford 31st Oct 2013.</description>
        <inlineHelpText>Hold money for future. Only possible to reserve cap with a with a forecasted meeting in the system.</inlineHelpText>
        <label>Reserved CAP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reviewer_or_Editor_MERC__c</fullName>
        <description>Records if HCP has been as reviewer or a member of a peer-reviewed editorial board.
Created by John A Adams 10/17/2013</description>
        <inlineHelpText>Have you been a reviewer or a member of a peer-reviewed editorial board?</inlineHelpText>
        <label>Reviewer or Editor</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Force_Code_GLBL__c</fullName>
        <description>Mastered workforce data for Territory information. Oliver Dunford 26th Nov 2013</description>
        <label>Sales Force Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Force_Description_GLBL__c</fullName>
        <description>Mastered workforce data from ODS for Territory information. Oliver Dunford 26th Nov 2013.</description>
        <label>Sales Force Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salutation_Txt_GLBL__c</fullName>
        <description>Salutation
Customer ODS to Mercury Mapping
Created by John A Adams 11/4/2013</description>
        <label>Salutation</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scnd_Nm_GLBL__c</fullName>
        <description>Workforce ODS data. Created 10/18/2013 by KLorenti, Mavens Consulting</description>
        <label>Second Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scnd_Ttl_Txt_GLBL__c</fullName>
        <description>Workforce ODS data. Created 10/18/2013 by KLorenti, Mavens Consulting</description>
        <label>Second Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Provider_MERC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When an account is chosen as a Service Provider on Meeting, this field will be stamped to indicate they are a Service Provider. Created 11/26/2013 by KLorenti, Mavens Consulting</description>
        <label>Service Provider?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Provider_Tier_MERC__c</fullName>
        <description>Stores the Service Provider Tier generated as a part of Mercury Use cases.  Created by Oliver Dunford 30th Oct 2013.</description>
        <label>Service Provider Tier</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sfx_Nm_GLBL__c</fullName>
        <description>Suffix
Customer ODS to Mercury Mapping
Created by John A Adams 11/4/2013</description>
        <label>Suffix</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Block_GLBL__c</fullName>
        <description>Flags where a Customer has requested a Source Block and this has been actioned within the Customer ODS. This should not modify the HCP record within Mercury as it is likely there will be legal documents such as contracts and other information that should not be modified in any way.
Created by John A Adams 10/23/2013</description>
        <label>Source Block</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Spclty_Cd_GLBL__c</fullName>
        <description>Primary Specialty Code
Customer ODS to Mercury Mapping
Created by John A Adams 11/4/2013</description>
        <label>Primary Specialty Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spclty_Desc_GLBL__c</fullName>
        <description>Primary Specialty Description
Customer ODS to Mercury Mapping
Created by John A Adams 11/4/2013</description>
        <label>Primary Specialty Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Speaking_Paid_CAP_MERC__c</fullName>
        <description>Paid CAP value for Speaker Meeting (excludes Consulting Projects).
Created by John A Adams 10/31/2013</description>
        <inlineHelpText>Service rendered, payment triggered. (After &apos;Services Rendered&apos; box ticked)</inlineHelpText>
        <label>Speaking Paid CAP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Src_Block_Flg_GLBL__c</fullName>
        <description>Source Block Flag
Customer ODS to Mercury Mapping
Created by John A Adams 11/4/2013</description>
        <label>Source Block Flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Src_Sys_Cd_GLBL__c</fullName>
        <description>Source System Code
Customer ODS to Mercury Mapping
Created by John A Adams 11/4/2013</description>
        <label>Source System Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Cd_GLBL__c</fullName>
        <description>Workforce ODS data. Created 10/18/2013 by KLorenti, Mavens Consulting</description>
        <label>Status Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Desc_GLBL__c</fullName>
        <description>Workforce ODS data. Created 10/18/2013 by KLorenti, Mavens Consulting</description>
        <label>Status Description</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_MERC__c</fullName>
        <description>Status of Account. Created 10/4/2013 by KLorenti.</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Validated by LMM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Store_Loc_Nbr_GLBL__c</fullName>
        <description>Store Location Number
Customer ODS to Mercury Mapping
Created by John A Adams 11/4/2013</description>
        <label>Store Loc Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Clsfctn_Cd_GLBL__c</fullName>
        <description>Sub Classification Code 
Customer ODS to Mercury Mapping
Created by John A Adams 11/4/2013</description>
        <label>Sub Classification Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Clsfctn_Desc_GLBL__c</fullName>
        <description>Sub Classification Description
Customer ODS to Mercury Mapping
Created by John A Adams 12/10/2013</description>
        <label>Sub Classification Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supervisor_Prsnl_Nbr_GLBL__c</fullName>
        <description>Workforce ODS data. Created 10/18/2013 by KLorenti, Mavens Consulting</description>
        <label>Supervisor Global Id</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Id_GLBL__c</fullName>
        <description>Workforce ODS data. Created 10/18/2013 by KLorenti, Mavens Consulting</description>
        <label>System Logon Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Id_GLBL__c</fullName>
        <description>Pulled over from Workforce SAD.  To indicate the Territory of Sales Reps. Oliver Dunford 12 Dec 2013.</description>
        <label>Territory Id</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tier_1_Criteria_Met_MERC__c</fullName>
        <description>Defines whether Tier 1 criteria for Tiering have been met. Set via workflow. Oliver Dunford 13th Jan</description>
        <label>Tier 1 Criteria Met</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tier_1_HCP_CV_Checked_MERC__c</fullName>
        <description>Used to confirm Tier 1 HCP post verification of CV.  Tier 1 HCP&apos;s must have CV verified. Oliver Dunford 14th Jan 2014.</description>
        <inlineHelpText>All Tier 1 HCP&apos;s must have their CV&apos;s verified before Tier 1 can be set.</inlineHelpText>
        <label>Tier 1 HCP CV Checked</label>
        <picklist>
            <picklistValues>
                <fullName>Confirmed HCP is Tier 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HCP is NOT Tier 1</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tier_1_Score_MERC__c</fullName>
        <description>Stores the score against Tier 1 criteria inclusive of commentary. Oliver Dunford 13th Jan 2013.</description>
        <label>Tier 1 Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tier_2_Criteria_Met_MERC__c</fullName>
        <description>Defines whether Tier 2 criteria for Tiering have been met. Set via workflow. Oliver Dunford 13th Jan</description>
        <label>Tier 2 Criteria Met</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tier_2_Score_MERC__c</fullName>
        <description>Stores the score against Tier 2 criteria inclusive of commentary. Oliver Dunford 13th Jan 2013.</description>
        <label>Tier 2 Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tier_3_Criteria_Met_MERC__c</fullName>
        <description>Defines whether Tier 3 criteria for Tiering have been met.  Set via workflow.  Oliver Dunford 13th Jan</description>
        <label>Tier 3 Criteria Met</label>
        <length>10</length>
        <type>Text</type>
    </fields>
</CustomObject>